[tool.poetry]
name = "csv-chat-streamlit"
version = "0.1.0"
description = ""
authors = ["Fahri Alfiansyah <fahrialfiansyah2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandasai = "^2.2.7"
streamlit = "^1.36.0"
numpy = "^1.23.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
